# jp-bulk-anki

./: Cargo.toml  README.md
src/: card.rs  cli.rs  deck.rs  deck_builder.rs  error.rs  main.rs
