[package]
name = "jp-bulk-anki"
version = "0.1.0"
edition = "2021"
description = "Uses https://ichi.moe to convert bulk Japnaese input (from stdin) into an anki deck of notes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.5", features = ["cargo"] }
genanki-rs = "0.1.3"
iter-progress = "0.8.0"
main_error = "0.1.2"
reqwest = { version = "0.11.11", features = ["blocking"] }
scraper = "0.13.0"
thiserror = "1.0.31"
urlencoding = "2.1.0"

[features]
